Q3/infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener
spec:
  selector:
    app: url-shortener
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: url-shortener

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  selector:
    app: mongodb
  ports:
    - port: 80
      targetPort: 27017
  selector:
    app: mongodb
